<resources>
    <string name="app_name">DMV Practice test</string>
    <string name="instructions">Select the best answer for the following questions</string>
    <string name="reset_button">Reset</string>
    <string name="submit_answer">Submit</string>
    <string name="email_results">Email Results</string>

    <!--Question # 1  and answers a, b, c -->
    <string name="question_1">You may drive off of the paved roadway to pass another vehicle:</string>
    <string name="ans_1_1">If the shoulder is wide enough to accommodate your vehicle.</string>
    <string name="ans_1_2">If the vehicle ahead of you is turning left.</string>
    <string name="ans_1_3">Under no circumstances.</string>
    <!--Question # 2  and answers a, b, c -->
    <string name="question_2">You are approaching a railroad crossing with no warning devices and are unable to see 400 feet down the tracks in one direction. The speed limit is:</string>
    <string name="ans_2_1">15 mph</string>
    <string name="ans_2_2">20 mph</string>
    <string name="ans_2_3">25mph</string>
    <!--Question # 3  and answers a, b, c -->
    <string name="question_3">When parking your vehicle parallel to the curb on a level street:</string>
    <string name="ans_3_1">Your front wheels must be turned toward the street.</string>
    <string name="ans_3_2">Your wheels must be within 18 inches of the curb.</string>
    <string name="ans_3_3">One of your rear wheels must touch the curb.</string>
    <!--Question # 4  and answers a, b, c -->
    <string name="question_4">When you are merging onto the freeway, you should be driving:</string>
    <string name="ans_4_1">At or near the same speed as the traffic on the freeway.</string>
    <string name="ans_4_2">Near the same speed as the traffic on the freeway.</string>
    <string name="ans_4_3">The posted speed limit for traffic on the freeway.</string>
    <!--Question # 5  and answers a, b, c -->
    <string name="question_5">When driving in fog, you should use your:</string>
    <string name="ans_5_1">Fog lights only.</string>
    <string name="ans_5_2">High beams.</string>
    <string name="ans_5_3">Low beams.</string>
    <!--Question # 6  and answers a, b, c -->
    <string name="question_6">A white painted curb means:</string>
    <string name="ans_6_1">Loading zone for freight or passengers.</string>
    <string name="ans_6_2">Loading zone for passengers or mail only.</string>
    <string name="ans_6_3">Loading zone for freight only.</string>
    <!--Question # 7  and answers a, b, c -->
    <string name="question_7">A school bus ahead of you in your lane is stopped with red lights flashing. You should:</string>
    <string name="ans_7_1">Stop, then proceed when you think all of the children have exited the bus.</string>
    <string name="ans_7_2">Slow to 25 MPH and pass cautiously.</string>
    <string name="ans_7_3">Stop as long as the red lights are flashing.</string>
    <!--Question # 8  and answers a, b, c -->
    <string name="question_8">California\'s "Basic Speed Law" says:</string>
    <string name="ans_8_1">You should never drive faster than posted speed limits.</string>
    <string name="ans_8_2">You should never drive faster than is safe for current conditions.</string>
    <string name="ans_8_3">The maximum speed limit in California is 70 mph on certain freeways.</string>
    <!--Question # 9  and answers a, b, c -->
    <string name="question_9"> You just sold your vehicle. You must notify the DMV within ___ days.</string>
    <string name="ans_9_1">5</string>
    <string name="ans_9_2">10</string>
    <string name="ans_9_3">15</string>
    <!--Question # 10  and answers a, b, c -->
    <string name="question_10">To avoid last minute moves, you should be looking down the road to where your vehicle will be in about______</string>
    <string name="ans_10_1">5 to 10 seconds</string>
    <string name="ans_10_2">10 to 15 seconds</string>
    <string name="ans_10_3">15 to 20 seconds</string>
</resources>